add tires/wheels pages

--- a/home.html
+++ b/home.html
@@ -228,7 +228,7 @@
                   <div class="info tires">
                     <div class='tp-caption LargeTitle sfl  tp-resizeme ' data-endspeed='500' data-speed='500' data-start='1300' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:3; white-space:nowrap;'><span style="font-style: normal;font-weight: 900;line-height: 52px;font-size: 58px;letter-spacing: -0.04em;text-transform: uppercase;color: #FFFFFF;padding-left:30px;">Wherever you<br>travel, we have<br>the right tires<br>for you.</span></div>
 
-                    <div class='tp-caption sfb  tp-resizeme ' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4; white-space:nowrap;padding-left:30px;'><a href='#' class="buy-btn" style="margin-top:25px; font-style: normal;  font-weight: 900;  font-size: 14px;  text-align: center;  text-transform: uppercase;  color: #FFFFFF;">Browse Tires</a></div>
+                    <div class='tp-caption sfb  tp-resizeme ' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4; white-space:nowrap;padding-left:30px;'><a href='shop_tires.html' class="buy-btn" style="margin-top:25px; font-style: normal;  font-weight: 900;  font-size: 14px;  text-align: center;  text-transform: uppercase;  color: #FFFFFF;">Browse Tires</a></div>
                   </div>
                 </div>
                 </div>
@@ -247,7 +247,7 @@
 
                     <div class='tp-caption Title sft  tp-resizeme ' data-endspeed='500' data-speed='500' data-start='1450' data-easing='Power2.easeInOut' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4; white-space:nowrap;padding-left:30px;padding-top:10px;font-style: normal;font-weight: 900;line-height: 32px;font-size: 36px;letter-spacing: -0.04em;text-transform: uppercase;color: #FFFFFF;'>We have not wheels.</div>
 
-                    <div class='tp-caption sfb  tp-resizeme ' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4; white-space:nowrap;padding-left:30px;'><a href='#' class="buy-btn" style="margin-top:25px; font-style: normal;  font-weight: 900;  font-size: 14px;  text-align: center;  text-transform: uppercase;  color: #FFFFFF;">Browse Wheels</a></div>
+                    <div class='tp-caption sfb  tp-resizeme ' data-endspeed='500' data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4; white-space:nowrap;padding-left:30px;'><a href='shop_wheels.html' class="buy-btn" style="margin-top:25px; font-style: normal;  font-weight: 900;  font-size: 14px;  text-align: center;  text-transform: uppercase;  color: #FFFFFF;">Browse Wheels</a></div>
                   </div>
                 </div>
                 </div>
@@ -269,12 +269,16 @@
         <div class="collection">
           <div class="caption">Shop Tires</div>
           <div class="image"><img src="images/shop_tires.png" alt=""></div>
-          <div class="tire-button shop-button-green explore"><a href="">Explore</a></div>
+          <div class="tire-button shop-button-green explore">
+            <a href="shop_tires.html">Explore</a>
+          </div>
         </div>
         <div class="collection">
           <div class="caption">Shop Wheels</div>
           <div class="image"><img src="images/shop_wheels.png" alt=""></div>
-          <div class="tire-button shop-button-green explore"><a href="">Explore</a></div>
+          <div class="tire-button shop-button-green explore">
+            <a href="shop_wheels.html">Explore</a>
+          </div>
         </div>
       </div>
     </div>
@@ -387,7 +391,9 @@
           </li>
         </ul>
       </div>
-      <div class="tire-button shop-button"><a href="">View All Brands</a></div>
+      <div class="tire-button shop-button">
+        <a href="shop_tires_by_brand.html">View All Brands</a>
+      </div>
       <div class="brands-divider"></div>
     </div>
   </div>
