--- a/shop_tires.html
+++ b/shop_tires.html
@@ -232,11 +232,15 @@
                       <div class="part">
                         <div class="collection">
                           <div><img src="images/slide_car.png" alt=""></div>
-                          <div class="tire-button shop-button-max"><a href="">Enter your vehicle</a></div>
+                          <div class="tire-button shop-button-max">
+                            <a href="shop_tires_by_vehicle.html">Enter your vehicle</a>
+                          </div>
                         </div>
                         <div class="collection">
                           <div><img src="images/slide_tire.png" alt=""></div>
-                          <div class="tire-button shop-button-max"><a href="">Enter your tire size</a></div>
+                          <div class="tire-button shop-button-max">
+                            <a href="shop_tires_by_size.html">Enter your tire size</a>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -399,7 +403,9 @@
           </li>
         </ul>
       </div>
-      <div class="tire-button shop-button-green all-brands"><a href="">View All Brands</a></div>
+      <div class="tire-button shop-button-green all-brands">
+        <a href="shop_tires_by_brand.html">View All Brands</a>
+      </div>
     </div>
   </div>
 
