--- a/shop_tires_by_vehicle.html
+++ b/shop_tires_by_vehicle.html
@@ -231,36 +231,58 @@
                         </div>
                         <div class="drop-down-area">
                           <div class="col-lg-4 col-sm-4">
-                            <label>Tread Width</label>
+                            <label>Year</label>
                             <div class="drop-down">
-                              <select title="Tread Width" name="" id="" defaultvalue="" class="">
-                                <option value="">Choose Tread Width</option>
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Year</option>
                               </select>
                             </div>
                           </div>
                           <div class="col-lg-4 col-sm-4">
-                            <label>Profile</label>
+                            <label>Make</label>
                             <div class="drop-down">
-                              <select title="Tread Width" name="" id="" defaultvalue="" class="">
-                                <option value="">Choose Profile</option>
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Make</option>
                               </select>
                             </div>
                           </div>
                           <div class="col-lg-4 col-sm-4">
-                            <label>Diameter</label>
+                            <label>Model</label>
                             <div class="drop-down">
-                              <select title="Tread Width" name="" id="" defaultvalue="" class="">
-                                <option value="">Choose Diameter</option>
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Model</option>
                               </select>
                             </div>
                           </div>
                         </div>
                         <div class="drop-down-area">
-                          <div class="radios">
-                            <input type="radio" class="radio" name="season">
-                            <label class="winter">Winter</label>
-                            <input type="radio" class="radio" name="season">
-                            <label>Summer/All Season</label>
+                          <div class="col-lg-4 col-sm-4">
+                            <label>Edition</label>
+                            <div class="drop-down">
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Edition</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-lg-4 col-sm-4">
+                            <label>Option</label>
+                            <div class="drop-down">
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Option</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-lg-4 col-sm-4">
+                            <div class="radios">
+                              <div>
+                                <input type="radio" class="radio" name="season">
+                                <label class="winter">Winter</label>
+                              </div>
+                              <div>
+                                <input type="radio" class="radio" name="season">
+                                <label>Summer/All Season</label>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="drop-down-area">
