--- a/shop_wheels.html
+++ b/shop_wheels.html
@@ -225,18 +225,21 @@
                 <div class="row">
                 <div class="col-lg-3 col-sm-3 col-md-3">&nbsp;</div>
                 <div class="col-lg-9 col-sm-9 col-md-9">
-                  <div class="info shop-wheels">
+                  <div class="info shop-tires">
                     <div class='tp-caption LargeTitle sfl tp-resizeme' style='z-index:3; white-space:nowrap;'><span style="font-style: normal;font-weight: 900;line-height: 52px;font-size: 58px;letter-spacing: -0.04em;text-transform: uppercase;color: #FFFFFF;padding-left:30px;text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.55);">Shop Wheels</span></div>
 
                     <div class='tp-caption sfb tp-resizeme' style='z-index:4; white-space:nowrap;padding-left:30px;'>
                       <div class="part">
                         <div class="collection">
                           <div><img src="images/slide_car.png" alt=""></div>
-                          <div class="tire-button shop-button-max"><a href="">Enter your vehicle</a></div>
+                          <div class="tire-button shop-button-max">
+                            <a href="shop_wheels_by_vehicle.html">Enter your vehicle</a>
+                          </div>
                         </div>
                         <div class="collection">
                           <div><img src="images/slide_wheels.png" alt=""></div>
-                          <div class="tire-button shop-button-max"><a href="">Enter rim dimensions</a></div>
+                          <div class="tire-button shop-button-max">
+                            <a href="shop_wheels_by_dimensions.html">Enter rim dimensions</a></div>
                         </div>
                       </div>
                     </div>
@@ -362,7 +365,9 @@
           </li>
         </ul>
       </div>
-      <div class="tire-button shop-button-green all-brands"><a href="">View All Brands</a></div>
+      <div class="tire-button shop-button-green all-brands">
+        <a href="shop_wheels_by_brand.html">View All Brands</a>
+      </div>
     </div>
   </div>
 
