--- a/shop_wheels_by_dimensions.html
+++ b/shop_wheels_by_dimensions.html
@@ -220,7 +220,7 @@
                 <div class="col-lg-3 col-sm-3 col-md-3">&nbsp;</div>
                 <div class="col-lg-9 col-sm-9 col-md-9">
                   <div class="info shop-tires" id="shop-tires">
-                    <div class='tp-caption LargeTitle sfl tp-resizeme' style='z-index:3; white-space:nowrap;'><span style="font-style: normal;font-weight: 900;line-height: 52px;font-size: 58px;letter-spacing: -0.04em;text-transform: uppercase;color: #FFFFFF;padding-left:30px;text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.55);">Shop Tires</span></div>
+                    <div class='tp-caption LargeTitle sfl tp-resizeme' style='z-index:3; white-space:nowrap;'><span style="font-style: normal;font-weight: 900;line-height: 52px;font-size: 58px;letter-spacing: -0.04em;text-transform: uppercase;color: #FFFFFF;padding-left:30px;text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.55);">Shop Wheels</span></div>
 
                     <div class='tp-caption sfb' style='z-index:4; white-space:nowrap;padding-left:30px;'>
                       <div class="part part-gray">
@@ -231,36 +231,58 @@
                         </div>
                         <div class="drop-down-area">
                           <div class="col-lg-4 col-sm-4">
-                            <label>Tread Width</label>
-                            <div class="drop-down">
-                              <select title="Tread Width" name="" id="" defaultvalue="" class="">
-                                <option value="">Choose Tread Width</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="col-lg-4 col-sm-4">
-                            <label>Profile</label>
-                            <div class="drop-down">
-                              <select title="Tread Width" name="" id="" defaultvalue="" class="">
-                                <option value="">Choose Profile</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="col-lg-4 col-sm-4">
                             <label>Diameter</label>
                             <div class="drop-down">
-                              <select title="Tread Width" name="" id="" defaultvalue="" class="">
+                              <select title="" name="" id="" defaultvalue="" class="">
                                 <option value="">Choose Diameter</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-lg-4 col-sm-4">
+                            <label>Width</label>
+                            <div class="drop-down">
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Width</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-lg-4 col-sm-4">
+                            <label>Offset</label>
+                            <div class="drop-down">
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Offset</option>
                               </select>
                             </div>
                           </div>
                         </div>
                         <div class="drop-down-area">
-                          <div class="radios">
-                            <input type="radio" class="radio" name="season">
-                            <label class="winter">Winter</label>
-                            <input type="radio" class="radio" name="season">
-                            <label>Summer/All Season</label>
+                          <div class="col-lg-4 col-sm-4">
+                            <label>Bolt Pattern</label>
+                            <div class="drop-down">
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Bolt Pattern</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-lg-4 col-sm-4">
+                            <label>Hub Bore</label>
+                            <div class="drop-down">
+                              <select title="" name="" id="" defaultvalue="" class="">
+                                <option value="">Choose Hub Bore</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-lg-4 col-sm-4">
+                            <div class="radios hidden">
+                              <div>
+                                <input type="radio" class="radio" name="season">
+                                <label class="winter">Winter</label>
+                              </div>
+                              <div>
+                                <input type="radio" class="radio" name="season">
+                                <label>Summer/All Season</label>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <div class="drop-down-area">
@@ -288,91 +310,54 @@
 
   <div class="container">
     <div class="row">
-      <div class="shop-row">
-        <ul>
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xs-12 shop-block all-season">
-            <div class="shop-inner">
-              <div class="shop-img"><img src="images/shop_tires_season.png"></div>
-              <div class="shop-title">All Season<br>Tires</div>
-              <div class="tire-button shop-button-green"><a href="">Shop</a></div>
-            </div>
-          </li>
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xs-12 shop-block all-weather">
-            <div class="shop-inner">
-              <div class="shop-img"><img src="images/shop_tires_weather.png"></div>
-              <div class="shop-title">All Weather<br>Tires</div>
-              <div class="tire-button shop-button-green"><a href="">Shop</a></div>
-            </div>
-          </li>
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xs-12 shop-block summer-tires">
-            <div class="shop-inner">
-              <div class="shop-img"><img src="images/shop_tires_summer.png"></div>
-              <div class="shop-title">Summer<br>Tires</div>
-              <div class="tire-button shop-button-green"><a href="">Shop</a></div>
-            </div>
-          </li>
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xs-12 shop-block winter-tires">
-            <div class="shop-inner">
-              <div class="shop-img"><img src="images/shop_tires_winter.png"></div>
-              <div class="shop-title">Winter<br>Tires</div>
-              <div class="tire-button shop-button-green"><a href="">Shop</a></div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="brands-title"><h2>Shop Tires By Brand</h2></div>
+      <div class="brands-title"><h2>Shop Wheels By Brand</h2></div>
       <div class="brands-row">
         <ul>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_michelin.png"></div>
-                <div class="brand-name">Michelin</div>
+                <div class="brand-img"><img src="images/brand_american_racing.png"></div>
+                <div class="brand-name">American Racing</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_bfgoodrich.png"></div>
-                <div class="brand-name">BF Goodrich</div>
+                <div class="brand-img"><img src="images/brand_asanti.png"></div>
+                <div class="brand-name">Asanti</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_uniroyal.png"></div>
-                <div class="brand-name">Uniroyal</div>
+                <div class="brand-img"><img src="images/brand_braelin.png"></div>
+                <div class="brand-name">Braelin</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_goodyear.png"></div>
-                <div class="brand-name">Goodyear</div>
+                <div class="brand-img"><img src="images/brand_dai.png"></div>
+                <div class="brand-name">Dai</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_dunlop.png"></div>
-                <div class="brand-name">Dunlop</div>
+                <div class="brand-img"><img src="images/brand_dub.png"></div>
+                <div class="brand-name">Dub</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_kelly.png"></div>
-                <div class="brand-name">Kelly</div>
+                <div class="brand-img"><img src="images/brand_fast.png"></div>
+                <div class="brand-name">Fast</div>
               </a>
             </div>
           </li>
@@ -383,55 +368,55 @@
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_bridgestone.png"></div>
-                <div class="brand-name">Bridgestone</div>
+                <div class="brand-img"><img src="images/brand_kmc.png"></div>
+                <div class="brand-name">KMC</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_firestone.png"></div>
-                <div class="brand-name">Firestone</div>
+                <div class="brand-img"><img src="images/brand_foose.png"></div>
+                <div class="brand-name">Foose</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_hankook.png"></div>
-                <div class="brand-name">Hankook</div>
+                <div class="brand-img"><img src="images/brand_fuel.png"></div>
+                <div class="brand-name">Fuel</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_kumho.png"></div>
-                <div class="brand-name">Kumho</div>
+                <div class="brand-img"><img src="images/brand_rockstar.png"></div>
+                <div class="brand-name">Rockstar</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_yokohama.png"></div>
-                <div class="brand-name">Yokohama</div>
+                <div class="brand-img"><img src="images/brand_niche.png"></div>
+                <div class="brand-name">Niche</div>
               </a>
             </div>
           </li>
           <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
             <div class="brand-inner">
               <a href="">
-                <div class="brand-img"><img src="images/brand_pirelli.png"></div>
-                <div class="brand-name">Pirelli</div>
+                <div class="brand-img"><img src="images/brand_rotiform.png"></div>
+                <div class="brand-name">Rotiform</div>
               </a>
             </div>
           </li>
         </ul>
       </div>
       <div class="tire-button shop-button-green all-brands">
-        <a href="shop_tires_by_brand.html">View All Brands</a>
+        <a href="shop_wheels_by_brand.html">View All Brands</a>
       </div>
     </div>
   </div>
